# bazel-monorepo

./: README.md
stage1/main/: BUILD.bazel  go.mod
stage2/main/: BUILD.bazel  go.mod  main.go  main_test.go
stage3/lib/: BUILD.bazel  go.mod  greenting.go  greenting_test.go
stage3/main/: BUILD.bazel  go.mod  go.work  main.go
