load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "main_lib",
    srcs = ["main.go"],
    importpath = "github.com/kamikazezirou/bazel-monorepo/stage2/main",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "main_test",
    srcs = ["main_test.go"],
    embed = [":main_lib"],
)
