load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = glob(
        ["**/*.go"],
        exclude = ["**/*_test.go"]
    ),
    importpath = "github.com/kamikazezirou/bazel-monorepo/stage3/lib",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    embed = [":lib"],
    srcs = glob(
        ["**/*_test.go"],
    ),
)
