load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main_lib",
    srcs = glob(
        ["**/*.go"],
        exclude = ["**/*_test.go"]
    ),
    importpath = "github.com/kamikazezirou/bazel-monorepo/stage3/main",
    deps = ["//lib"], # //lib:lib と同等
    visibility = ["//visibility:private"],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)
